Changelog
=========

1.4.1 (unreleased)
------------------

- Nothing changed yet.


1.4 (2012-03-14)
----------------

- Fix CSS images for sites using virtual host _vh_ components.
  [dokai]

- Hide buttons after clearing the queue.
  [giacomos]

- Trigger custom JS events after each file upload and also when all files
  were uploaded
  [avoinea]

- Updated responseJSON with more info about the uploaded file
  (uid, title and name)
  [avoinea]

- More robust check for existing file with same id.
  Avoid some unsuitable error messages.
  [thomasdesvenain]

- Move interfaces to collective.quickupload.interfaces module.
  [thomasdesvenain]

- Finnish translation
  [saffe]

1.3.1 (2011-12-22)
------------------

- Display quickupload portlet on display views only
  (disable it on edit forms, etc).
  [thomasdesvenain]

- Add error logs when failures happen.
  [thomasdesvenain]

- Works with dexterity AND without blobs.
  [thomasdesvenain]


1.3.0 (2011-11-29)
------------------

- Added Italian translation
  [giacomos]

- Make sure that the portlet is rendered if upload_portal_type is set to auto.
  [swampmonkey]

- Prevent diazo themes from theming the json response.
  [swampmonkey]

- If downloaded content type has been selected in portlet settings
  and content type can't been added in current folder,
  portlet is hidden.
  [thomasdesvenain]

- Works with dexterity.
  We can upload dexterity content types which have a file or image field.
  We can upload contents in dexterity containers.
  [thomasdesvenain]

- Updated Chinese translation.
  [jianaijun]

1.2.1 (2011-10-10)
------------------

- Don't speak about drag and drop feature if navigator is IE.
  (it doesn't works unless version is IE 9.)
  [thomasdesvenain]

- If chameleon is installed the i18n:attributes don't get translated if the
  tag doesn't already have the attribute(s).
  [swampmonkey]

- Update with more Norwegian translations.
  [tormod, hannosch]

1.2.0 (2011-09-22)
------------------
